<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
        
    <TextView
        android:id="@+id/alert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DialogChangePassword_text" />

    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/DialogChangePassword_Password1"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15sp" />
 
    <EditText
        android:id="@+id/EditPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
 		android:inputType="textPassword" >
        <requestFocus />
    </EditText>
        
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DialogChangePassword_Password2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />
 
    <EditText
        android:id="@+id/EditPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
 		android:inputType="textPassword" >        
    </EditText>
	
	<TextView
	    android:id="@+id/textError"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/DialogChangePassword_error"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/red"
	    android:textSize="10sp" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/alert_OK"
		    style="@android:style/Widget.Holo.Button.Small"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dip"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:text="OK" />

		<Button
		    android:id="@+id/alert_close"
		    style="@android:style/Widget.Holo.Button.Small"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dip"
		    android:paddingLeft="10dp"
		    android:paddingRight="10dp"
		    android:text="Close" />

	</LinearLayout>

</LinearLayout>