<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >
 
   <TextView
        android:id="@+id/alert_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DialogPassword_text" />

    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/DialogPassword_Password"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="15sp" />
 
    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
 		android:inputType="textPassword" >
        <requestFocus />
    </EditText>

    <TextView
	    android:id="@+id/textError"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/DialogPassword_error"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textColor="@color/red"
	    android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dialog_ok"
              style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="OK" />

        <Button
            android:id="@+id/dialog_close"
            style="@android:style/Widget.Holo.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Close" />

    </LinearLayout>
</LinearLayout>